[package]
name = "repro-threshold"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
env_logger = "0.11"
futures = "0.3"
in-toto = "0.4"
log = "0.4"
pem = "3"
ratatui = "0.30.0-beta.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9"

[dev-dependencies]
data-encoding = "2.9.0"
