[package]
name = "repro-threshold"
version = "0.1.0"
description = "Threshold-based Reproducible Builds pluggable transport using your trusted rebuilders"
authors = ["kpcyrd <git@rxv.cc>"]
license = "Apache-2.0 OR MIT-0"
repository = "https://github.com/kpcyrd/repro-threshold"
edition = "2024"

[dependencies]
anyhow = "1"
astral-tokio-tar = "0.5"
async-compression = { version = "0.4", features = ["tokio", "xz"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = { version = "0.29", features = ["event-stream"] }
data-encoding = "2"
deb822-fast = "0.2.0"
env_logger = "0.11"
futures = "0.3"
in-toto = "0.4"
log = "0.4"
pem = "3"
ratatui = "0.30.0-beta.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
tokio-ar = "0.9.0"
toml = "0.9"
url = "2"
